<resources>
    <string name="app_name">GpsTracker</string>
    <string name="title_activity_welcome">Welcome</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="button">Button</string>
    <string name="openwelcome">OpenWelcome</string>
    <string name="otp">Otp</string>
    <string name="show_my_location">Show My Location</string>
    <string name="number">Number</string>

    <string name="show_my_friend_location">Show My Friend Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="register2">register</string>
    <string name="mobile_number">Mobile number</string>
    <string name="password">Password</string>
    <string name="register">register</string>
    <string name="sign_in">sign in</string>
    <string name="friend_mobile_number">Friend\'s mobile number</string>
    <string name="friend_otp">Friend\'s OTP</string>
    <string name="confirm">confirm</string>
    <string name="title_activity_friend_validation">FriendValidation</string>
    <string name="go">go</string>
    <string name="mark">mark</string>
    <string name="sat">sat</string>
    <string name="clear">clear</string>
    <string name="temporary_text_1">Temporary text 1</string>
    <string name="my_profile">My profile</string>
    <string name="profile">Profile</string>
    <string name="this_is_your_otp">This is your otp</string>
    <string name="ok">OK</string>
    <string name="this_is_my_otp">This is my Otp</string>
    <string name="buckleup">BuckleUp</string>
    <string name="technology_towards_innovation">Technology Towards Innovation</string>
    <string name="name2">Name</string>
    <string name="email">Email</string>
    <string name="email2">Email</string>
    <string name="name3">Name</string>
    <string name="number2">Number</string>
    <string name="otp2">Otp</string>
    <string name="otp3">Otp</string>
    <string name="password2">Password</string>
    <string name="password3">Password</string>
    <string name="phone_number2">Phone Number</string>
    <string name="check_friend_location">Check Friend Location</string>
    <string name="generate_otp2" />
    <string name="my_location">My Location</string>
    <string name="pata_nai">Pata nai</string>
    <string name="generate_otp">Generate Otp</string>
    <string name="otp1">Otp</string>
    <string name="email1">Email</string>
    <string name="name1">Name</string>
    <string name="number1">Number</string>
    <string name="password1">Password</string>
    <string name="text1">Text</string>
    <string name="forget_password">Forget Password</string>
    <string name="your_phonenumber">Your phonenumber</string>
    <string name="submit">Submit</string>
    <string name="your_email">Your Email</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="mobile_number_918421466794">Mobile Number : +918421466794</string>
    <string name="email_khemrajrathore1997_gmail_com">Email : khemrajrathore1997@gmail.com</string>
    <string name="write_your_feedback_here">Write your feedback here :-</string>
    <string name="feedback">Feedback</string>
    <string name="feedback1">Feedback</string>
    <string name="feedback2">Feedback</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="get">Get</string>
    <string name="confirm_date">Confirm Date</string>
    <string name="confirm_time">Confirm Time</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>

</resources>
