<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFECB8"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFECB8">

    <EditText
        android:id="@+id/regname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/regemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/regname"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/regphnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/regemail"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/regpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/regphnumber"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/regbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/regpassword"
        android:layout_marginTop="60dp"
        android:onClick="openregisterrequest"
        android:text="@string/register2"
        android:textColor="@color/cast_expanded_controller_text_color"
        android:background="@drawable/my_button"/>
</RelativeLayout>
</ScrollView>