<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250sp" android:layout_height="250sp"
    android:background="#FFECB8"
    tools:ignore="ExtraText">



    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        tools:ignore="RtlHardcoded"
        android:background="#B22222"
        android:textColor="#ffffff"
        android:layout_marginLeft="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp" />



    <TextView
        android:id="@+id/otpdisplay_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:textSize="20dp"
        android:textColor="#000000"
        android:gravity="center"
        android:text="@string/textview1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/otpdisplay_validity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:textSize="20dp"
        android:textColor="#000000"
        android:text="@string/textview"
        android:layout_below="@+id/otpdisplay_otp"
        android:layout_centerHorizontal="true"
        tools:ignore="SpUsage" />

</RelativeLayout>