<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFECB8"
    tools:context="com.buckleup.gpstracker.ForgetPassword">

    <EditText
        android:id="@+id/forgetnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/your_phonenumber"
        android:inputType="phone"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="116dp"
        android:layout_marginBottom="54dp"
        android:layout_above="@+id/forgetemail"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/forgetemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="14"
        android:gravity="center"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="234dp"
        android:layout_marginBottom="69dp"
        android:layout_above="@+id/forgetsubmit"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/forgetsubmit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@drawable/my_button"
        android:onClick="forgetPassword"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="358dp"
        tools:ignore="MissingConstraints"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="152dp" />
</RelativeLayout>
